<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtb1"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lbl_rating1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_rating1"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info2"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtb2"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lbl_rating2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_rating2"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtb3"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lbl_rating3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_rating4"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info4"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtb4"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lbl_rating4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_rating4"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info5"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtb5"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lbl_rating5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_rating5"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info6"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtb6"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lbl_rating7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_rating5"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info7"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rtb7"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/lbl_rating6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_rating7"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/vast_shadow"
        android:text="@string/txt_resultado"
        android:textAlignment="center"
        android:textColor="@color/txt_resultado"
        android:textSize="60sp" />

    <Button
        android:id="@+id/btn_Borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_Borrar"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_Borrar"
        android:textColor="@color/btn_Borrar_TextColor"
        app:cornerRadius="1dp" />
</LinearLayout>